--- a/projects.json
+++ b/projects.json
@@ -677,5 +677,12 @@
     "createdDate": "2025-07-25",
     "modifiedDate": "2025-09-01",
     "path": "097.Context Menu Customization"
+  },
+  {
+    "id": "098",
+    "title": "Test",
+    "createdDate": "2025-09-07",
+    "modifiedDate": "2025-09-07",
+    "path": "098.Test"
   }
 ]
